Bug 479764 - Cursor is invisible on portrait monitors
Summary: Cursor is invisible on portrait monitors
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: 5.92.0
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-13 19:54 UTC by Chris Sutcliff
Modified: 2024-01-15 10:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Sutcliff 2024-01-13 19:54:15 UTC
SUMMARY

I did originally post this in https://bugs.kde.org/show_bug.cgi?id=479583 but I think it's different enough to be it's own bug, especially as someone pointed out that bug had been marked resolved so perhaps wouldn't get much attention.

Using a patched kwin with the fix for 479583 added, this worked for landscape however the cursor is still invisible for portrait monitors.


STEPS TO REPRODUCE
1. Be affected by 479586?
2. Use a version of kwin with the fix from 479586 applied
3. Set a screen to portrait orientation (either one)

OBSERVED RESULT
Cursor is invisible on portrait screen (if you have multiple monitors the landscape ones will be fine).

EXPECTED RESULT
Cursor is visible in all orientations

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 6.7.0-4-cachyos (64-bit)
(available in About System)
KDE Plasma Version: 5.92.0
KDE Frameworks Version: 5.248.0
Qt Version: 6.7.0
Comment 1 Schlaefer 2024-01-13 20:38:10 UTC
Can confirm.

On Arch Linux plasma 6 RC1 with a patch [1] for 479583 [2] and a second installation Garuda with a kwin dev build from 2024-01-13.

- Being affected by the original bug 479583 [2] having all displays in landscape works fine with patch [1] (Arch) or a 2024-01-13 kwin build (Garuda)
- Rotating a display by 90 degrees doesn't show a mouse cursor anymore similar to the original bug report [2]

Operating System: Garuda Linux 
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 5.249.0
Qt Version: 6.6.1
Kernel Version: 6.6.10-zen1-1.1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × 11th Gen Intel® Core™ i5-11400 @ 2.60GHz
Memory: 31,2 GiB of RAM
Graphics Processor: Mesa Intel® Arc

[1] https://pastebin.com/ykhzZZdB
[2]  https://bugs.kde.org/show_bug.cgi?id=479583
Comment 2 fanzhuyifan 2024-01-14 17:06:16 UTC
can reproduce (on wayland)
Comment 3 fanzhuyifan 2024-01-14 17:07:53 UTC
(In reply to fanzhuyifan from comment #2)
> can reproduce (on wayland)

To clarify, can reproduce on git master.
Comment 4 Bug Janitor Service 2024-01-15 04:54:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4921
Comment 5 fanzhuyifan 2024-01-15 08:19:03 UTC
Git commit 1f74e9a5c5dd66d5455d4b402fe29215505a481a by Yifan Zhu.
Committed on 15/01/2024 at 05:48.
Pushed by fanzhuyifan into branch 'master'.

scene/cursordelegate_opengl: undo ortho() flip y

Flip y axis before and after applying renderTarget.transform to undo
ortho() flipping the y axis. Otherwise the cursor is invisible on
rotated screen.
FIXED-IN: 6.0

M  +4    -1    src/scene/cursordelegate_opengl.cpp

https://invent.kde.org/plasma/kwin/-/commit/1f74e9a5c5dd66d5455d4b402fe29215505a481a
Comment 6 fanzhuyifan 2024-01-15 08:33:08 UTC
Git commit f0387d2f852a6e5bcf96fb332126192a2a601c04 by Yifan Zhu.
Committed on 15/01/2024 at 09:19.
Pushed by fanzhuyifan into branch 'Plasma/6.0'.

scene/cursordelegate_opengl: undo ortho() flip y

Flip y axis before and after applying renderTarget.transform to undo
ortho() flipping the y axis. Otherwise the cursor is invisible on
rotated screen.
FIXED-IN: 6.0


(cherry picked from commit 1f74e9a5c5dd66d5455d4b402fe29215505a481a)

M  +4    -1    src/scene/cursordelegate_opengl.cpp

https://invent.kde.org/plasma/kwin/-/commit/f0387d2f852a6e5bcf96fb332126192a2a601c04
Comment 7 Chris Sutcliff 2024-01-15 10:16:28 UTC
Thank you for the fix, I can confirm it is working for me too.